# Beta-Pen

./: .gitignore
BetaPen/: Beam_N.mac~  FDG.mac  README  README~  init_vis.mac  vis.mac~
BetaPen/include/: #EventAction.hh#  ActionInitialization.hh  ActionInitialization.hh~  DetectorConstruction.hh  DetectorConstruction.hh~  DetectorMessenger.hh~  EventAction.hh  EventAction.hh~  HistoManager.hh
BetaPen/src/: DetectorConstruction.cc  DetectorConstruction.cc~  DetectorMessenger.cc~  EventAction.cc  EventAction.cc~  HistoManager.cc  HistoManager.cc~  PhysicsList.cc~  PrimaryGeneratorAction.cc  PrimaryGeneratorAction.cc~  RunAction.cc  SteppingAction.cc  SteppingAction.cc~
BetaPen_SubtractionExample/: AmBe.mac  Beam_N.mac  CMakeLists.txt  CMakeLists.txt~  N_G_Det.cc  N_G_Det.cc~  README.md  vis.mac
BetaPen_SubtractionExample/include/: DetectorMessenger.hh  EventAction.hh  HistoManager.hh  HistoManager.hh~  PhysicsList.hh  PhysicsListMessenger.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorAction.hh~  RunAction.hh  RunAction.hh~  SteppingAction.hh  SteppingAction.hh~
BetaPen_SubtractionExample/src/: ActionInitialization.cc  ActionInitialization.cc~  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  HistoManager.cc  PhysicsList.cc  PhysicsListMessenger.cc  RunAction.cc~  SteppingAction.cc
